tests/expected_invalid_generic_phase_decl.diag.out
<input>:2:18: error: phase declarations may not be generic
    public phase Task<T> {
                     ^
